--- a/src/app/spotify/spotify.component.html
+++ b/src/app/spotify/spotify.component.html
@@ -1,3 +1,4 @@
 <div class="spotify">
 	<a href="http://localhost:3000/spotify/do-auth">auth</a>
+	<button mat-button (click)="populateAlbums()">populate library</button>
 </div>
