--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,6 +1,8 @@
 <div class="app-navigation">
 	<mat-nav-list>
 		<a mat-list-item href="">Main</a>
+		<a mat-list-item href="bandcamp">Bandcamp</a>
+		<a mat-list-item href="spotify">Spotify</a>
 		<a mat-list-item href="profile">Profile</a>
 		<a mat-list-item href="library">Library</a>
 	</mat-nav-list>
