--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -6,4 +6,5 @@
 		<a mat-list-item href="profile">Profile</a>
 		<a mat-list-item href="library">Library</a>
 	</mat-nav-list>
+	<button mat-button (click)="drop()">Drop</button>
 </div>
