--- a/src/app/spotify/spotify.component.html
+++ b/src/app/spotify/spotify.component.html
@@ -1,4 +1,24 @@
 <div class="spotify">
-	<a href="http://localhost:3000/spotify/do-auth">auth</a>
+	<a mat-button href="http://localhost:3000/spotify/do-auth">auth</a>
 	<button mat-button (click)="populateAlbums()">populate library</button>
+	<button mat-button (click)="getLikedAlbums()">get user albums</button>
+
+	<table mat-table [dataSource]="albums()">
+		<ng-container matColumnDef="name">
+			<th mat-header-cell *matHeaderCellDef>Name</th>
+			<td mat-cell *matCellDef="let element"> {{ element.name }}</td>
+		</ng-container>
+
+		<ng-container matColumnDef="artists">
+			<th mat-header-cell *matHeaderCellDef>Artists</th>
+			<td mat-cell *matCellDef="let element">
+				<div *ngFor="let artist of element.artists">
+					{{ artist.name }}
+				</div>
+			</td>
+		</ng-container>
+
+		<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+		<tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+	</table>
 </div>
