--- a/src/app/bandcamp/bandcamp.component.html
+++ b/src/app/bandcamp/bandcamp.component.html
@@ -1,12 +1,21 @@
 <div class="app-bandcamp">
 	<button mat-button (click)="getUserLibrary()">Get user library</button>
-	<div *ngFor="let album of albums()">
-		<mat-card class="album-card" appearance="outlined">
-			<mat-card-header>
-				<mat-card-title>Album: {{ album.name }} Artist: {{ album.raw.band_name }}</mat-card-title>
-			</mat-card-header>
-			<img src="{{ album.raw.item_art_url }}" mat-card-md-image>
-			<mat-card-footer></mat-card-footer>
-		</mat-card>
-	</div>
+	<table mat-table [dataSource]="albums()">
+		<ng-container matColumnDef="name">
+			<th mat-header-cell *matHeaderCellDef>Name</th>
+			<td mat-cell *matCellDef="let element"> {{ element.name }}</td>
+		</ng-container>
+
+		<ng-container matColumnDef="artists">
+			<th mat-header-cell *matHeaderCellDef>Artists</th>
+			<td mat-cell *matCellDef="let element">
+				<div *ngFor="let artist of element.artists">
+					{{ artist.name }}
+				</div>
+			</td>
+		</ng-container>
+
+		<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+		<tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+	</table>
 </div>
